# bevy_imposter

./: Cargo.toml  out.txt  readme.md
assets/boimps/: output.boimp
assets/shaders/: bindings.wgsl  fragment.wgsl  shared.wgsl  standard_material_imposter_baker.wgsl  vertex.wgsl  vertex_billboard.wgsl
examples/: custom_mesh.rs  dynamic.rs  load_asset.rs  mat.rs  save_asset.rs  view.rs
examples/helpers/: camera_controller.rs
src/: asset_loader.rs  bake.rs  lib.rs  material.rs  node.rs  oct_coords.rs  render.rs  util.rs
src/shaders/: bindings.wgsl  fragment.wgsl  imposter_blit.wgsl  imposter_imposter_baker.wgsl  shared.wgsl  standard_material_imposter_baker.wgsl  vertex.wgsl
