[package]
name = "bevy_imposter"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = "0.14.2"
bevy = { git = "https://github.com/robtfm/bevy", branch = "release-0.14-dcl-cosmic-noimage" }
wgpu = "0.20"
crossbeam-channel = "0.5.13"
rand = "0.8.5"
async-channel = "2.2.0"
zip = "2"
anyhow = "*"
pico-args = "0.5.0"
serde = { version = "1", features = ["derive"] }
